# es3

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  deny.toml  devenv.nix  devenv.yaml  dist-workspace.toml
.cargo/: audit.toml
.github/: dependabot.yaml
.github/workflows/: analysis-scorecard.yaml  ci.yaml
crates/es3/: Cargo.toml
crates/es3-cli/: Cargo.toml
crates/es3-cli/src/: main.rs
crates/es3-cli/tests/: cli.rs
crates/es3-web/: .gitignore  Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
crates/es3-web/src/: app.rs  download.rs  lib.rs  main.rs  model.rs  session.rs
crates/es3-web/src/locales/: en-US.ftl  hu-HU.ftl
crates/es3-web/tests/: download.rs  model.rs  render.rs  session.rs
crates/es3-web/tests/common/: mod.rs
crates/es3/src/: bergshamra_verify.rs  bergshamra_verify_native.rs  document.rs  dossier.rs  error.rs  lib.rs  output.rs  parsed.rs  transform.rs  verify.rs  xml.rs
crates/es3/tests/: api_boundary.rs  extraction.rs  parsed_parity.rs  parsing.rs  signing_target_shape.rs  vendor_fixture_corpus.rs  verify.rs
crates/es3/tests/fixtures/: README.md  xmldsig-other-certificate.pem  xmldsig-test-certificate.pem  xmldsig-test-private-key.pem  xmldsig-test-public-key.pem
nix/: wasm-bindgen-cli-versions.nix  wasm-bindgen-cli.nix
