[package]
name = "es3-cli"
description = "Command line interface for ES3 dossier files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
es3 = { workspace = true }

clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = { workspace = true }
