[package]
name = "es3"
description = "Library for parsing, extracting, and verifying ES3 dossier files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64 = "0.22.1"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
x509-cert = "0.2.5"
zip = { version = "9.0.0-pre2", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bergshamra-core = "0.6.1"
bergshamra-dsig = "0.6.1"
bergshamra-keys = "0.6.1"
